--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   text-align: center;
-  background-color: #011F3F;
+  background-color: #548dca;
 }
 
 #game-title {
@@ -29,7 +29,7 @@ body {
   display: inline-block;
   height: 200px;
   width: 200px;
-  border: 10px solid black;
+  border: 10px solid rgba(0, 0, 0, 0.418);
   border-radius: 20%;
 }
 
